June 30, 2022 Morning 01:51AM

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -16,6 +18,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LaMiaCucina"
         tools:targetApi="s">
+        <activity
+            android:name=".activity.recipe.CustomizeRecipeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.recipe.AddRecipeActivity"
+            android:exported="false" />
         <activity
             android:name=".SelectRecipesActivity"
             android:exported="false" />
